# SPDX-FileCopyrightText: 2023 perillamint
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "blue-alpha-lib"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["sony-alpha-camera", "gnss", "btle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
tokio = { version = "1.27", features = ["full"] }
anyhow = "1.0"
uuid = "1"
chrono = "0.4"
byteorder = "1.4"
lazy_static = "1.4"
